# mlcar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  push_and_run.sh  push_binary.sh  run_binary.sh
client/: __init__.py  controller_test.py  display.py  requirements.txt
client/mlcar/: ai.py  communicate.py  configs.py  controller.py  data.py  logger.py  test.py
client/mlcar/configs/: config.json
client/mlcar/logging/: data.py
client/mlcar/neuralnet/: abstract.py  common.py  errors.py  genetic.py  network.py
client/mlcar/vision/: lane-detect.py  threshold_tests.py
include/: mjpegserver.h  process.h
pymlcars/: configs.py  logger.py  main.py
pymlcars/configs/: __init__.py
src/: main.cpp  mjpegserver.cpp  process.cpp
